# goit-pythonweb-hw-10

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: README  env.py
src/: exceptions.py  main.py  schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: verify_email.html
